--- a/src/app/modules/authors/authors.component.html
+++ b/src/app/modules/authors/authors.component.html
@@ -45,8 +45,8 @@
         <div class="rrcomendalign1 ">
           <div class="rrkkprdetacn2">
             <p class="rrkkprtag3">Profile Completeness:</p>
-            <!-- <p class="rrkkprtag4">{{Author[0].ProfilePercentage}}% complete</p>
-            <div class="progress rrkkprtag5"  aria-valuenow={{Author[0].ProfilePercentage}}  role="progressbar" aria-label="Basic example" aria-valuenow="10"
+            <p class="rrkkprtag4">{{calculateTotal()}}% complete</p>
+           <!-- <div class="progress rrkkprtag5"  aria-valuenow={{Author[0].ProfilePercentage}}  role="progressbar" aria-label="Basic example" aria-valuenow="10"
               aria-valuemin="0" aria-valuemax="100">
               <div class="rrprogress-bar"  [ngStyle]="{'width': Author[0].ProfilePercentage + '%',  'background-color': getProgressBarColor()}"></div>
             </div> -->
