--- a/src/app/modules/authprofile/authprofile.component.html
+++ b/src/app/modules/authprofile/authprofile.component.html
@@ -2,17 +2,23 @@
     <div class="container">
         <div class="row">
             <div class="col-4 text-center">
-                <img class="pimg"  *ngIf="User[0].profileUrl"  src={{User[0].profileUrl}}>
-                <img class="pimg"  *ngIf="!User[0].profileUrl"  src="../assets/Frame 82.png">
+                <img class="pimg" *ngIf="User[0].profileUrl" src={{User[0].profileUrl}}>
+                <img class="pimg" *ngIf="!User[0].profileUrl" src="../assets/Frame 82.png">
                 <p class="prohead">Profile Image</p>
-                
+
                 <button class="probtn btn" mat-dialog-close routerLink="/profile/choose-your-picutre-now">
-    <img src="../assets/upload share_.png" alt="Upload">Upload Image
-  </button>
-                <p class="com">10% complete</p>
-                <div class="progress pgrss" role="progressbar" aria-label="Basic example" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">
+                    <img src="../assets/upload share_.png" alt="Upload">Choose Your Profile
+                </button>
+                <p class="com">{{calculateTotal()}}% Completed</p>
+                 <!-- <div class="progress pgrss" role="progressbar" aria-label="Basic example" aria-valuenow="10"
+                    aria-valuemin="0" aria-valuemax="100">
                     <div class="progress-bar pgrssbar" style="width: 10%"></div>
-                  </div>
+                </div>  -->
+                <div class="progress pgrss" role="progressbar" aria-label="Basic example"
+                    [attr.aria-valuenow]="calculateTotal()" aria-valuemin="0" aria-valuemax="100">
+                    <div class="progress-bar pgrssbar" [style.width.%]="calculateTotal()"></div>
+                </div>
+
                 <p class="prodes">Completing your<br>
                     profile will land you more jobs</p>
             </div>
@@ -20,39 +26,45 @@
                 <div class="line"></div>
             </div>
             <div class="col-7">
-               <img mat-dialog-close class="close" src="../assets/x letter_.png" alt="close">
-               <br>
-               <p class=" prohead1">Complete your Profile</p>
-               <p class="prodes1">Lorem ipsum dolor sit amet consectetur. Erat pellentesque eleifend at suspendisse</p>
-               <div class="mrt">
-               <div class="container-fluid prode" style="cursor: pointer;">
-                <div class="row">
-                    <div class="col-12" routerLink="/profile/author-profile" mat-dialog-close >                            
-                            <p class="procont procont1"> <img class="circ" src="../assets/Ellipse 33.png" alt="Pubkin"><span style="margin-left: 10px;">Profile Setup</span> <img class="navarrow" src="../assets/nav arrow down_.png" alt="Nav"></p>
-                            <p class="prodesc">&nbsp;&nbsp;&nbsp;&nbsp;Lorem Ipsum</p>
-                            <hr>
+                <img mat-dialog-close class="close" src="../assets/x letter_.png" alt="close">
+                <br>
+                <p class=" prohead1">Complete your Profile</p>
+                <p class="prodes1">Lorem ipsum dolor sit amet consectetur. Erat pellentesque eleifend at suspendisse</p>
+                <div class="mrt">
+                    <div class="container-fluid prode" style="cursor: pointer;">
+                        <div class="row">
+                            <div class="col-12" routerLink="/profile/author-profile" mat-dialog-close>
+                                <p class="procont procont1"> <img class="circ" src="../assets/Ellipse 33.png"
+                                        alt="Pubkin"><span style="margin-left: 10px;">Profile Setup</span> <img
+                                        class="navarrow" src="../assets/nav arrow down_.png" alt="Nav"></p>
+                                <p class="prodesc">&nbsp;&nbsp;&nbsp;&nbsp;Lorem Ipsum</p>
+                                <hr>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="container-fluid prode" style="cursor: pointer;">
+                        <div class="row">
+                            <div class="col-12" routerLink="profile/banking-details" mat-dialog-close>
+                                <p class="procont procont1"> <img class="circ" src="../assets/Ellipse 33.png"
+                                        alt="Pubkin"><span style="margin-left: 10px;">Add Banking Details</span> <img
+                                        class="navarrow" src="../assets/nav arrow down_.png" alt="Nav"></p>
+                                <p class="prodesc">&nbsp;&nbsp;&nbsp;&nbsp;Add your bank details and work rate</p>
+                                <hr>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="container-fluid prode" style="cursor: pointer;">
+                        <div class="row">
+                            <div class="col-12" routerLink="profile/authors-idverify" matDialogClose>
+                                <p class="procont procont1"> <img class="circ" src="../assets/Ellipse 33.png"
+                                        alt="Pubkin"><span style="margin-left: 10px;">Govt. ID Verification</span> <img
+                                        class="navarrow" src="../assets/nav arrow down_.png" alt="Nav"></p>
+                                <p class="prodesc">&nbsp;&nbsp;&nbsp;&nbsp;Any govt. ID will work</p>
+                                <hr>
+                            </div>
+                        </div>
                     </div>
                 </div>
-               </div>
-               <div class="container-fluid prode"  style="cursor: pointer;">
-                <div class="row">
-                    <div class="col-12"  routerLink="profile/banking-details"  mat-dialog-close>                            
-                            <p class="procont procont1"> <img class="circ" src="../assets/Ellipse 33.png" alt="Pubkin"><span style="margin-left: 10px;">Add Banking Details</span> <img class="navarrow" src="../assets/nav arrow down_.png" alt="Nav"></p>
-                            <p class="prodesc">&nbsp;&nbsp;&nbsp;&nbsp;Add your bank details and work rate</p>
-                            <hr>
-                    </div>
-                </div>
-               </div>
-               <div class="container-fluid prode" style="cursor: pointer;">
-                <div class="row">
-                    <div class="col-12" routerLink="profile/authors-idverify" matDialogClose>                            
-                            <p class="procont procont1"> <img class="circ" src="../assets/Ellipse 33.png" alt="Pubkin"><span style="margin-left: 10px;">Govt. ID Verification</span> <img class="navarrow" src="../assets/nav arrow down_.png" alt="Nav"></p>
-                            <p class="prodesc">&nbsp;&nbsp;&nbsp;&nbsp;Any govt. ID will work</p>
-                            <hr>
-                    </div>
-                </div>
-               </div>
-            </div>
             </div>
         </div>
     </div>
