--- a/src/app/modules/signup/signup.component.html
+++ b/src/app/modules/signup/signup.component.html
@@ -61,7 +61,7 @@
             </div>
         </div>
 
-        <div class="text-center form ">
+        <div class="text-center form  kkcalfr">
             <p class="head head1">
                 Signup and Start working
             </p>
@@ -117,7 +117,9 @@
 <div mat-icon-button matSuffix (click)="togglePasswordVisibility1()" [attr.aria-label]="hidePassword ? 'Hide password' : 'Show password'" [attr.aria-pressed]="hidePassword" style="cursor: pointer;">
     <span class="shhid2">{{ hidePassword ? 'Show Password' : 'Hide Password' }}</span>
 </div><br>
+
 </div>
+
             <div style="    width: 99%;margin-top: 18px;">
                 <mat-checkbox class="example-margin check123"></mat-checkbox>
                 <span class="meme meme2">I have
