--- a/src/app/modules/freelancer/freelancer.component.html
+++ b/src/app/modules/freelancer/freelancer.component.html
@@ -42,7 +42,7 @@
        
     
        
-            <div class="container jobcontents" *ngFor="let JobPost of Posts">
+            <div class="container jobcontents" *ngFor="let JobPost of Posts; let i = index">
        
               <div class="row" >
               <div class="col-12">
@@ -68,8 +68,12 @@
                   {{JobPost.toBudget}} est. time : {{JobPost.projectEndDate}} {{JobPost.durationOfProject}} - Posted
                   <!-- {{getPostStatus(JobPost.createDate) }} -->
                 </p>
-                <p class="kkjbtxtline3"><span *ngIf="!showMore">{{JobPost.description | slice:0:300}}....</span><span *ngIf="showMore">{{JobPost.description}}</span><span (click)="ShowMoreLess()" class="text-decoration-underline">  More</span></p>
-
+                <!-- <p class="kkjbtxtline3"><span *ngIf="!showMore">{{JobPost.description | slice:0:300}}....</span><span *ngIf="showMore">{{JobPost.description}}</span><span (click)="ShowMoreLess()" class="text-decoration-underline">  More</span></p> -->
+                <p class="kkjbtxtline3">
+                  <span *ngIf="!JobPost.showMore">{{JobPost.description | slice:0:100}}....</span>
+                  <span *ngIf="JobPost.showMore || JobPost.showMoreIndex === i">{{JobPost.description}}</span>
+                  <span (click)="ShowMoreLess(i)" class="text-decoration-underline">{{ JobPost.showMore ? 'Less' : 'More' }}  </span>
+              </p>
                 <div class="kkjbtxtline4"><img src="../assets/startick.png"> Profile verified</div>
                 <div class="kkjbtxtline5"><img src="../assets/startick.png"> Paymeny verified</div>
                 <div class="kkjbtxtline6">Tracking_ID : {{JobPost.jobUniqueId}}</div>
