--- a/src/app/modules/profilesetting/profilesetting.component.html
+++ b/src/app/modules/profilesetting/profilesetting.component.html
@@ -19,8 +19,8 @@
           routerLink="/setting/account-info"><span class="clr" [ngClass]="{'clr1': selectedButton === 'button4'}"></span>Contact Info</button><br> -->
         <button class="sidebtn" (click)="onButtonClick('button5')" [ngClass]="{'selected': selectedButton === 'button5'}"
         routerLink="/setting/account-info"><span class="clr" [ngClass]="{'clr1': selectedButton === 'button5'}"></span>My Profile</button><br>
-        <button class="sidebtn" (click)="onButtonClick('button6')"
-           [ngClass]="{'selected': selectedButton === 'button6'}"><span class="clr"  [ngClass]="{'clr1': selectedButton === 'button6'}"></span>Profile Settings</button><br>
+        <!-- <button class="sidebtn" (click)="onButtonClick('button6')"
+           [ngClass]="{'selected': selectedButton === 'button6'}"><span class="clr"  [ngClass]="{'clr1': selectedButton === 'button6'}"></span>Profile Settings</button><br> -->
         <button class="sidebtn" (click)="onButtonClick('button7')" [ngClass]="{'selected': selectedButton === 'button7'}"
           routerLink="/setting/password-&-security"><span class="clr" [ngClass]="{'clr1': selectedButton === 'button7'}"></span>Password and Security</button><br>
         <button class="sidebtn" (click)="onButtonClick('button8')" [ngClass]="{'selected': selectedButton === 'button8'}"
