--- a/src/app/modules/setup-profile/setup-profile.component.scss
+++ b/src/app/modules/setup-profile/setup-profile.component.scss
@@ -1135,12 +1135,69 @@ display: flex;
   border-radius: 20px;
 border: 2px solid #9E9E9E;
 }
+.kkadedudt{
+  width: 700px;
+  height: auto;
 
+background: #FFF;
+}
+.mohead { 
+  border: none;
+}
+.kkadeduhd12{
+  font-family: 'League Spartan', sans-serif;
+  font-size: 40px;
+  font-weight: 500;
+  margin-left: 15px;
+  margin-top: 25px;
+  }
+  .kkedubt{
+    background-color: #A426D1;
+    color: #FFF;
+    padding: 12px 32px;
+    border-radius: 4px;
+    color: #FFF;
+    font-family: 'League Spartan', sans-serif;
+    font-size: 20px;
+    font-style: normal;
+    line-height: normal;
+    border: 0px;
+    float: right;
+    margin-top: 41px;
+    margin-right: 7px;
+  }
+  .placvv {
+    width: 600px;
+    margin-left: 30px;
+    color: #292525;
+    font-family: League Spartan;
+    font-size: 17px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+    padding: 12px;
+   outline: none;
+    }
+    .projtitlevv {
+      color: #333;
+      font-family: League Spartan;
+      font-size: 22px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 36px;
+      margin-left: 5px;
+      }
+      
 input[type=text]:focus {
   outline: none;  
   border-color:#A426D1;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(208, 0, 255, 0.6);
   }
+  input[type=email]:focus {
+    outline: none;  
+    border-color:#A426D1;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(208, 0, 255, 0.6);
+    }
   textarea:focus {
   outline: none;  
   border-color:#A426D1;
