--- a/src/app/modules/apply-now/apply-now.component.html
+++ b/src/app/modules/apply-now/apply-now.component.html
@@ -20,9 +20,12 @@
         <input type="text" id="rate" name="rate" [(ngModel)]="appliedservice.applyData.rate">
         <input type="text" id="status" name="status" [(ngModel)]="appliedservice.applyData.status">
         <input type="text" id="userEmail" name="userEmail" [(ngModel)]="appliedservice.applyData.userEmail">
-        <input type="text" id="skillSet" name="skillSet" [(ngModel)]="UserData[0].description">
+        <input type="text" id="skillSet" name="skillSet" [(ngModel)]="appliedservice.applyData.skillSet">
         <input type="text" id="fileUrl" name="fileUrl" [(ngModel)]="appliedservice.applyData.fileUrl">
         <input type="text" id="AttachFile" name="AttachFile" [(ngModel)]="appliedservice.applyData.AttachFile">
+        <input type="text" id="applideUserProfile" name="applideUserProfile" [(ngModel)]="appliedservice.applyData.applideUserProfile">
+        <input type="text" id="jobUniqueId" name="jobUniqueId" [(ngModel)]="appliedservice.applyData.jobUniqueId">
+
         <p class="phead">Submit a Proposal</p>
         <div class="apbox">
             <div class="container">
