--- a/src/app/modules/view-freelancers/view-freelancers.component.html
+++ b/src/app/modules/view-freelancers/view-freelancers.component.html
@@ -30,10 +30,8 @@
             <div class="col-1">
                 <img class="show12" src="../assets/show more.png" alt="Pubkin Its yours" (click)="toggleIcons(Post)">  
                 <div class="EDITDEL" *ngIf="Post.showIcons" >
-              
-                        <img  src="./assets/Frame 193.png">
-                        <img src="./assets/deleteico.png" data-bs-toggle="modal" data-bs-target="#deletmodel">
-                
+                        <!-- <img  src="./assets/Frame 193.png"> -->
+                        <img src="./assets/deleteico.png" data-bs-toggle="modal" data-bs-target="#deletmodel">                
                 
             </div>
         </div>
