--- a/src/app/modules/view-freelancers/view-freelancers.component.scss
+++ b/src/app/modules/view-freelancers/view-freelancers.component.scss
@@ -101,6 +101,7 @@ padding-right: 83px;
 
 .show12{ 
     margin-top: 37px;
+    cursor: pointer;
 }
 
 .cicr { 
@@ -138,7 +139,7 @@ margin-top: 28px;
 }
 
 .EDITDEL{
-    margin-top: 35px;
+    margin-top: 99px;
     margin-left: -20px;
     position: absolute;
     display: flex;
