--- a/src/app/modules/authors/authors.component.html
+++ b/src/app/modules/authors/authors.component.html
@@ -5,7 +5,7 @@
     <div class="row">
       <div class="col-xl-6 col-lg-8">
         <div class="rrcomposrelalign1">
-          <input type="text" class="rrinputsearch1" placeholder="Search Job posting">
+          <input type="text" class="rrinputsearch1" placeholder="Search Job posting" name="search" [(ngModel)]="searchTerm" (input)="onSearchChange($event)">
           <img class="rrsrchicon1" src="./assets/search.png" alt="pubkin Start a career now">
           <button class="btn  rralibtnall dropdown-toggle" type="button" id="dropdownMenuButton1"
             data-bs-toggle="dropdown" aria-expanded="false">
@@ -70,7 +70,7 @@
       </div>
     </div>
   </div>
-  <div class="container " *ngFor="let JobPost of Posts">
+  <div class="container " *ngFor="let JobPost of Posts  | jobsearch : searchTerm ">
     <div class="borderboxv" *ngIf=" JobPost.userId == UserData[0].id" >
       <div class="row" >
         <br>
