--- a/src/app/modules/authprofile/authprofile.component.scss
+++ b/src/app/modules/authprofile/authprofile.component.scss
@@ -26,9 +26,10 @@
     background: #A426D1;
     color: #FFF;
     font-family: League Spartan;
-    font-size: 15px;
+    font-size: 18px;
     font-style: normal;
     font-weight: 500;
+    line-height: normal;
     -webkit-box-shadow: 2px 4px 0px 1px rgba(0, 0, 0, 0.16), 0 9px 10px 0 rgba(0, 0, 0, 0.12);
     box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.16), 0 9px 10px 0 rgba(0, 0, 0, 0.12);
 }
@@ -68,8 +69,9 @@ margin-top: 18px;
 }
 
 .pgrssbar { 
-    background-color: #151718;
+    background-color: #A426D1;
 }
+
 
 .line { 
     width: 3px;
@@ -122,7 +124,7 @@ margin-top: 18px;
     font-family: League Spartan;
     font-size: 25px;
     font-style: normal;
-    font-weight: 700;
+    font-weight: 500;
     line-height: normal;
     margin-top: 40px;
     margin-left: -20px;
@@ -142,7 +144,7 @@ margin-top: 18px;
 }
 
 .procont1 { 
-    font-weight: 700;
+    font-weight: 500;
     margin-top: 2px;
 }
 
