--- a/src/app/modules/freeprofile/freeprofile.component.scss
+++ b/src/app/modules/freeprofile/freeprofile.component.scss
@@ -11,7 +11,7 @@
     font-family: League Spartan;
     font-size: 24px;
     font-style: normal;
-    font-weight: 600;
+    font-weight: 500;
     line-height: 36px;
     margin-top: 16px;
 }
@@ -69,7 +69,7 @@ margin-top: 18px;
 }
 
 .pgrssbar { 
-    background-color: #151718;
+    background-color: #A426D1;
 }
 
 .line { 
@@ -121,7 +121,7 @@ margin-top: 18px;
     font-family: League Spartan;
     font-size: 25px;
     font-style: normal;
-    font-weight: 700;
+    font-weight: 500;
     line-height: normal;
     margin-top: 39px;
     margin-left: -20px;
@@ -142,7 +142,7 @@ margin-top: 18px;
 }
 
 .procont1 { 
-    font-weight: 700;
+    font-weight: 500;
     margin-top: 2px;
 }
 
